--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,16 @@
 			<artifactId>dynamic-datasource-spring-boot-starter</artifactId>
 			<version>3.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 
 	</dependencies>
 
